# OpenAEC_stijlbook

./: .gitignore  CLAUDE.md  README.md  generate_huisstijl_pdfs.py
brandbook/: BRANDBOOK.md  DESIGN-SYSTEM.md  LAYOUTS.md  styleguide.html
brandbook/assets/: export_assets.py
brandbook/assets/colors/: cmyk-reference.md
project-templates/Tauri+React/: COMPONENT-MANIFEST.md  INTEGRATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
project-templates/Tauri+React/.github/workflows/: release.yml
project-templates/Tauri+React/src/: App.css  App.tsx  main.tsx  themes.css
project-templates/Tauri+React/src-tauri/: Cargo.toml  tauri.conf.json
project-templates/Tauri+React/src-tauri/capabilities/: default.json
project-templates/Tauri+React/src-tauri/icons/: icon.icns
project-templates/Tauri+React/src-tauri/src/: lib.rs  main.rs
project-templates/Tauri+React/src/components/: DocumentBar.tsx
project-templates/Tauri+React/src/components/backstage/: Backstage.tsx
project-templates/Tauri+React/src/components/feedback/: FeedbackDialog.tsx
project-templates/Tauri+React/src/components/ribbon/: EditTab.tsx  FormatTab.tsx  HelpTab.tsx  InsertTab.tsx
project-templates/Tauri+React/src/components/settings/: SettingsDialog.tsx
project-templates/Tauri+React/src/i18n/locales/en/: backstage.json  common.json  settings.json
project-templates/Tauri+React/src/i18n/locales/nl/: backstage.json  common.json  settings.json
