[package]
name = "open-template"
version = "0.1.0"
description = "Open Template - A Tauri App"
authors = ["Impertio"]
edition = "2021"

[lib]
name = "open_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-os = "2"
